--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/JeanLebrument/react-native-fabric-digit/issues"
   },
-  "homepage": "https://github.com/JeanLebrument/react-native-fabric-digit#readme"
+  "homepage": "https://github.com/JeanLebrument/react-native-fabric-digit#readme",
+  "dependencies": {
+		"react": "15.4.1",
+		"react-native": "0.39.2"
+	}
 }
